// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/badge/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <span
      class="anticon ant-scroll-number-custom-component"
      role="img"
      style="color:#f5222d"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-clock-circle-o"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/change.md correctly 1`] = `
<div>
  <div>
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-count"
        data-show="true"
        title="5"
      >
        <span
          class="ant-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class="current"
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
    <div
      class="ant-btn-group"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-minus-o"
            />
          </svg>
        </span>
      </button>
      <button
        class="ant-btn"
        type="button"
      >
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-plus-o"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="margin-top:10px"
  >
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-dot"
        data-show="true"
      />
    </span>
    <button
      aria-checked="true"
      checked=""
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-pink"
        />
        <span
          class="ant-badge-status-text"
        >
          pink
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-red"
        />
        <span
          class="ant-badge-status-text"
        >
          red
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-yellow"
        />
        <span
          class="ant-badge-status-text"
        >
          yellow
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-orange"
        />
        <span
          class="ant-badge-status-text"
        >
          orange
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-cyan"
        />
        <span
          class="ant-badge-status-text"
        >
          cyan
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-green"
        />
        <span
          class="ant-badge-status-text"
        >
          green
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-blue"
        />
        <span
          class="ant-badge-status-text"
        >
          blue
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-purple"
        />
        <span
          class="ant-badge-status-text"
        >
          purple
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-geekblue"
        />
        <span
          class="ant-badge-status-text"
        >
          geekblue
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-magenta"
        />
        <span
          class="ant-badge-status-text"
        >
          magenta
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-volcano"
        />
        <span
          class="ant-badge-status-text"
        >
          volcano
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-gold"
        />
        <span
          class="ant-badge-status-text"
        >
          gold
        </span>
      </span>
    </div>
    <div>
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-lime"
        />
        <span
          class="ant-badge-status-text"
        >
          lime
        </span>
      </span>
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <span
      class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
    >
      <span
        class="ant-badge-status-dot"
        style="background:#f50"
      />
      <span
        class="ant-badge-status-text"
      >
        #f50
      </span>
    </span>
    <br />
    <span
      class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
    >
      <span
        class="ant-badge-status-dot"
        style="background:#2db7f5"
      />
      <span
        class="ant-badge-status-text"
      >
        #2db7f5
      </span>
    </span>
    <br />
    <span
      class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
    >
      <span
        class="ant-badge-status-dot"
        style="background:#87d068"
      />
      <span
        class="ant-badge-status-text"
      >
        #87d068
      </span>
    </span>
    <br />
    <span
      class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
    >
      <span
        class="ant-badge-status-dot"
        style="background:#108ee9"
      />
      <span
        class="ant-badge-status-text"
      >
        #108ee9
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/dot.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-notification-o"
        />
      </svg>
    </span>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
  <span
    class="ant-badge"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-notification-o"
        />
      </svg>
    </span>
  </span>
  <span
    class="ant-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
</div>
`;

exports[`renders ./components/badge/demo/link.md correctly 1`] = `
<a
  href="#"
>
  <span
    class="ant-badge"
  >
    <span
      class="head-example"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</a>
`;

exports[`renders ./components/badge/demo/no-wrapper.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="25"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class="current"
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      style="background-color:#fff;color:#999;box-shadow:0 0 0 1px #d9d9d9 inset"
      title="4"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class="current"
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/overflow.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="100"
    >
      99+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      10+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="1000"
    >
      999+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/status.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/title.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="Custom hover text"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</div>
`;
